<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">



    <ScrollView
        android:id="@+id/scrolling"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="parent"
        tools:layout_editor_absoluteX="38dp"
        tools:layout_editor_absoluteY="85dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nameApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/red"
                android:padding="12dp"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:id="@+id/logoMarvel"
                android:layout_width="wrap_content"
                android:layout_height="160dp"
                android:src="@drawable/logo" />

            <HorizontalScrollView
                android:id="@+id/scrollingChips"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/logoMarvel">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/chipGroup"
                        app:singleSelection="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center">

                        <com.google.android.material.chip.Chip
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Hero1"
                            app:chipBackgroundColor="@color/hero"/>
                        <com.google.android.material.chip.Chip
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Hero2"
                            app:chipBackgroundColor="@color/hero"/>
                        <com.google.android.material.chip.Chip
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Hero3"
                            app:chipBackgroundColor="@color/hero"/>
                        <com.google.android.material.chip.Chip
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Hero4"
                            app:chipBackgroundColor="@color/hero"/>
                        <com.google.android.material.chip.Chip
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Hero5"
                            app:chipBackgroundColor="@color/hero"/>

                        <com.google.android.material.chip.Chip
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Villain1"
                            app:chipBackgroundColor="@color/villain"/>
                        <com.google.android.material.chip.Chip
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Villain2"
                            app:chipBackgroundColor="@color/villain"/>
                        <com.google.android.material.chip.Chip
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Villain3"
                            app:chipBackgroundColor="@color/villain"/>
                        <com.google.android.material.chip.Chip
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Villain4"
                            app:chipBackgroundColor="@color/villain"/>
                        <com.google.android.material.chip.Chip
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Villain5"
                            app:chipBackgroundColor="@color/villain"/>


                    </com.google.android.material.chip.ChipGroup>

                </LinearLayout>



            </HorizontalScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:text="@string/tittle_movie1"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textSize="24dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:background="@color/hero"
                    android:padding="4dp"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="360dp"
                    android:src="@drawable/poster_movie1"
                    android:background="@color/hero"/>
                <ToggleButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textOff="@string/text_toggleButton_off"
                    android:textOn="@string/text_toggleButton_on"/>

                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:rating="0"
                    android:stepSize="1"
                    android:layout_gravity="center"/>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/text_text_radioButton"/>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/text_text_radioButton2"/>

                </RadioGroup>


                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_checkBox"
                    android:layout_gravity="center"/>

            </LinearLayout>






        </LinearLayout>



    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>